Product Types and Suppliers INSERT working.

--- a/views/product-types.hbs
+++ b/views/product-types.hbs
@@ -21,7 +21,7 @@
         </tbody>
     </table>
     <h3>Add a Product Type:</h3>
-    <form class="product-types" id="add-product-type-form">
+    <form class="product-types" id="add-product-type-form" method="POST" action="/add-product-type">
         <label for="input-typeName">Type Name:</label>
         <input type="text" name="input-typeName" id="input-typeName" required>
 
