more css updates

--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -1,5 +1,5 @@
-<article><h2>Customers Page</h2>
-<h3>Test</h3>
+<article><h2>Table of Customer Data</h2>
+<h3>View current data below</h3>
 </article>
 <section>
     <table id="customers-table">
@@ -31,7 +31,7 @@
     </table>
     <article>
     <h2>Add a New Customer</h2>
-    <p>Enter the Customer Information below and hit submit to add a new Customer</p>
+    <h3>Provide customer details below</h3>
     </article>
     <form id="add-customer-form">
         <label for="input-fname">First Name:</label>
