--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,8 +34,9 @@
     color:var(--charcoal);
     font-family: 'Roboto', sans-serif; /* Define with at least one font name and its related generic family name.*/
     margin-top: 3rem;
-    padding:0;
     min-width: 700px;
+    padding: 25px;
+    padding-top: 80px;
   }
   
   /*  ----- Page layout blocks -----  */
@@ -104,12 +105,11 @@
     color:var(--purpledragon);
     font-family: 'Roboto', sans-serif;
     margin-top:3rem;
-    padding: 25px;
-    /* max-width: 1200px; */
+    padding-top: 15px;
     border-style: none;
     text-align: center;
     font-size: 1.2em;
-    box-shadow: 0 0 15px var(--purpledragondark);
+    border-top: 5px double var(--greenback);
   }
   
   /* ----- Anchors ----- Text links */
@@ -122,7 +122,6 @@
   /*  ----- Navigation ----- Override text links for navigation only.  */
   .navbar {
     overflow: hidden;
-    /* background-color: var(--purpledragondark10); */
   }
   
   /* Style the links inside the navigation menu */
@@ -133,7 +132,7 @@
     font-family: 'Lora', serif;
     font-weight: bold;
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px 13px;
     text-decoration: none;
     border-radius: 15px; 
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -186,7 +185,7 @@
   h2 {color:var(--greenback);
   margin-top: 3rem;}
   h3 {color:var(--purpledragonlight);
-    margin-top: 3rem;}
+    }
   h4 {}
   h5 {}
   h6 {}
@@ -219,7 +218,7 @@
   /*  ----- Table ----- */
   table {
     border-collapse: collapse;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     font-size: .8em;
     font-family: 'Roboto', sans-serif;
     min-width: 400px;
@@ -227,6 +226,7 @@
     border-radius: 15px;
     overflow: hidden;
     max-width: 1000px;
+    padding: 25px;
 }
 
 thead tr {
@@ -423,13 +423,88 @@ input[type=submit] {
   /*   ===== TABLET  media query overrides mobile styles ===== */
   @media all and (max-width: 800px) {
     header { 
-      max-width: 600px;
+      max-width: 800px;
       padding-bottom: 125px;
-      padding-top: 50px;
+      padding-top: 110px;
     }
+
+    p {
+      word-wrap: break-word;
+    }
+
+    h1 {
+      display: none;
+    }
+
+    .logo {
+      min-width: 200px;
+      min-height: 200px;
+    }
+
+    table {
+      border: 3px solid var(--greenback);
+      padding: 25px;
+    }
+
+    thead {
+      visibility: hidden;
+      height: 0;
+      position: absolute;
+    }
+
+    tr {
+      display: block;
+      margin-bottom: .625em;
+    }
+    
+    td {
+      border: 3px solid var(--greenback);
+      border-bottom: none;
+      display: block;
+      font-size: 16px;
+      text-align: left;
+    }
+    
+    td::before {
+      content: attr(data-label);
+      float: left;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    
+    td:last-child {
+      border-bottom: 3px solid var(--purpledragonlight);
+    }
+
+    footer {
+      max-width: 800px;
+    }
+  }
+
+  @media all and (max-width: 500px) {
+
+    h1{
+      display:none;
+    }
+
+    .logo {
+      min-width: 200px;
+      min-height: 200px;
+    }
+    header { 
+      max-width: 500px;
+      padding-bottom: 125px;
+      padding-top: 110px;
+    }
+
     form {
       max-width: 340px;
     }
+
+    footer {
+      max-width: 500px;
+    }
+
   }
   
   /*   ===== DESKTOP  media query overrides mobile and tablet styles ===== */
