substantive changes to the ui

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,4 +1,5 @@
 <h2>Products Page</h2>
+<h3>Product Data</h3>
 <section>
     <table id="products-table">
         <thead>
@@ -24,7 +25,7 @@
             {{/each}}
         </tbody>
     </table>
-    <h3>Add a Product:</h3>
+    <h3>Add a New Product</h3>
     <form class="products-form" id="add-product-form" method="POST" action="/add-product">
         <label for="input-name">Name:</label>
         <input type="text" name="input-name" id="input-name" required>
