--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -1,5 +1,5 @@
-<article><h2>Table of Customer Data</h2>
-<h3>View current data below</h3>
+<article><h2>Customers Page</h2>
+<h3>Customer Data</h3>
 </article>
 <section>
     <table id="customers-table">
@@ -30,8 +30,7 @@
         </tbody>
     </table>
     <article>
-    <h2>Add a New Customer</h2>
-    <h3>Provide customer details below</h3>
+    <h3>Add a New Customer</h3>
     </article>
     <form id="add-customer-form">
         <label for="input-fname">First Name:</label>
