--- a/views/product-types.hbs
+++ b/views/product-types.hbs
@@ -1,4 +1,5 @@
 <h2>Product Types Page</h2>
+<h3>Product Type Data</h3>
 <section>
     <table id="product-types-table">
         <thead>
@@ -20,7 +21,7 @@
             {{/each}}
         </tbody>
     </table>
-    <h3>Add a Product Type:</h3>
+    <h3>Add a New Product Type</h3>
     <form class="product-types" id="add-product-type-form" method="POST" action="/add-product-type">
         <label for="input-typeName">Type Name:</label>
         <input type="text" name="input-typeName" id="input-typeName" required>
