--- a/views/suppliers.hbs
+++ b/views/suppliers.hbs
@@ -1,4 +1,5 @@
 <h2>Suppliers Page</h2>
+<h3>Supplier Data</h3>
 <section>
     <table id="suppliers-table">
         <thead>
@@ -26,7 +27,7 @@
             {{/each}}
         </tbody>
     </table>
-    <h3>Add a Supplier:</h3>
+    <h3>Add a New Supplier</h3>
     <form class="suppliers-form" id="add-supplier-form" method="POST" action="add-supplier">
         <label for="input-name">Name:</label>
         <input type="text" name="input-name" id="input-name" required>
