--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,32 +10,27 @@
     <article>
         <h3>Customers Page</h3>
         <p>
-            This page displays all customer information. Additionally, from this page you can also add a new
-            customer to the database.
+            This page allows you to view all of the current customer data. It will also enable you to add a new customer. 
         </p>
         <h3>Products Page</h3>
         <p>
-            This page will show you all available products to choose from. This page also displays some basic
-            information about the product type as well as each product's supplier.
+            This page allows you to view all of the current product data. It will also enable you to add a new product. 
         </p>
         <h3>Suppliers Page</h3>
         <p>
-            This page will show you all available information about each of our suppliers.
+            This page allows you to view all of the current supplier data. It will also enable you to add a new supplier. 
         </p>
         <h3>Product Types Page</h3>
         <p>
-            This page will show you all available information about each of our product types.
+            This page allows you to view all of the current product type data. It will also enable you to add a new product type. 
         </p>
         <h3>Sales Page</h3>
         <p>
-            This page will show you all available information about each order that has been placed with
-            Real Nice Dragons.
+            This page allows you to view all of the current sales data. It will also enable you to add a new sale, delete a sale, update the date of a sale, or update the customer of a sale. 
         </p>
         <h3>Sales Details Page</h3>
         <p>
-            This page will you give you all the information about each line in each order that has been placed
-            with Real Nice Dragons. This page will eventually have a search function so that the user only sees
-            information about the particular order they are looking for.
+            This page allows you to view all of the current transactional data. It will also enable you to add a new transaction to a sale. 
         </p>
     </article>
 </section>
