--- a/views/suppliers.hbs
+++ b/views/suppliers.hbs
@@ -30,28 +30,28 @@
     <h3>Add a New Supplier</h3>
     <form class="suppliers-form" id="add-supplier-form" method="POST" action="add-supplier">
         <label for="input-name">Name:</label>
-        <input type="text" name="input-name" id="input-name" required>
+        <input type="text" name="input-name" id="input-name" required placeholder="Distribution Anon">
 
         <label for="input-phone">Phone Number:</label>
-        <input type="number" name="input-phone" id="input-phone" required>
+        <input type="number" name="input-phone" id="input-phone" required placeholder="555-555-5555">
 
         <label for="input-email">Email Address:</label>
-        <input type="email" name="input-email" id="input-email" required>
+        <input type="email" name="input-email" id="input-email" required placeholder="realgoodz@aol.com">
 
         <label for="input-address1">Street Address (Line 1):</label>
-        <input type="text" name="input-address1" id="input-address1" >
+        <input type="text" name="input-address1" id="input-address1" placeholder="20934 Smith Rd.">
 
         <label for="input-address2">Street Address (Line 2)</label>
-        <input type="text" name="input-address2" id="input-address2">
+        <input type="text" name="input-address2" id="input-address2" placeholder="Plot B">
         
         <label for="input-city">City:</label>
-        <input type="text" name="input-city" id="input-city">
+        <input type="text" name="input-city" id="input-city" placeholder="Simi Valley">
         
         <label for="input-state">State:</label>
-        <input type="text" name="input-state" id="input-state" maxlength="2" required>
+        <input type="text" name="input-state" id="input-state" maxlength="2" required placeholder="CA">
 
         <label for="input-zip">ZIP:</label>
-        <input type="number" name="input-zip" id="input-zip">
+        <input type="number" name="input-zip" id="input-zip" placeholder="98073">
 
         <input type="submit" value="Add Supplier" />
         </form>
