--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,6 +9,7 @@
     <script src='/App.js' type="text/javascript"></script>
 </head>
 <header class="nav-head">
+	<div class="background-img"></div>
 	<div class="logo-container">
     <img class="logo" src="logo/circledragon.png" alt="Purple Dragon logo">
     <h1>Real Nice Dragons</h1>
