--- a/views/product-types.hbs
+++ b/views/product-types.hbs
@@ -24,10 +24,10 @@
     <h3>Add a New Product Type</h3>
     <form class="product-types" id="add-product-type-form" method="POST" action="/add-product-type">
         <label for="input-typeName">Type Name:</label>
-        <input type="text" name="input-typeName" id="input-typeName" required>
+        <input type="text" name="input-typeName" id="input-typeName" required placeholder="Plushie">
 
         <label for="input-typeDesc">Type Description:</label>
-        <input type="text" name="input-typeDesc" id="input-Desc" required>
+        <input type="text" name="input-typeDesc" id="input-Desc" required placeholder="A soft collector's toy">
 
         <input type="submit" value="Add Product Type" />
     </form>
