deleting tests I didn't use and updating comments

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,3 @@
-/*  ===== MOBILE styles (reside at the top and are inherited by all devices) ===== */
-/*  ===== See tablet, desktop, and print @media queries at the bottom. */
-
-
 /*   ----- Imports  -----  */
 
 @import url(//fonts.googleapis.com/css?family=Roboto);
@@ -78,14 +74,10 @@
     max-width: 1200px;
     border-style: none;
   }
-  section {}
     article {
       margin: 20px;
     }
-      #topic1 {}
-      #topic2 {}
-  div {}
-  aside {}
+    
   footer {
     background-color:var(--eggshell);
     color:var(--purpledragon);
@@ -101,10 +93,6 @@
   
   /* ----- Anchors ----- Text links */
   a {color:var(--purpledragonlight);}
-  a:link {}
-  a:hover {}
-  a:active {}
-  a:visited {}
   
   /*  ----- Navigation ----- Override text links for navigation only.  */
 
@@ -171,13 +159,6 @@ header {
   display: none;
 }
 
-  /*  -----  Typography  ----- */
-  p {}
-  br {}
-  ol, ul, dl {}
-  li {}
-  dt {}
-  dd {}
   
   h1, h2, h3, h4, h5, h6 {} 
   h1 {color:var(--eggshell);
@@ -195,34 +176,7 @@ font-family: 'Lora', serif;}
     margin-top: 3rem;
     font-size: 2rem;
     }
-  h4 {}
-  h5 {}
-  h6 {}
   
-  abbr {}
-  acronym {}
-  address {}
-  blockquote {}
-    q {}
-    cite {}
-  em {}
-  hr {}
-  mark {}
-  s {}
-  span {}
-  strong {}
-  sub {}
-  sup {}
-  time {}
-  
-  /*  ----- Coding or instructional typography ----- */
-  pre {}
-  code {}
-  kbd {}
-  samp {}
-  var {}
-  del {} 
-  ins {}
   
   /*  ----- Table ----- */
   table {
@@ -316,6 +270,7 @@ select {
   box-shadow:rgba(0, 0, 0, 0.06);
   width: 90%;
   border: none;
+  background-color: var(--eggshell);
 
 }
 
@@ -413,32 +368,10 @@ input[type=submit] {
     left: 30% !important;
     bottom:0 !important;
   } 
-
-  svg {}
-  picture {}
-    source {}
-  iframe {}
-  video {}
-  audio {}
-  embed {}
-  object {}
   
   /*  ----- Classes for alignment, positioning, widths, grids, embellishments, and animation -----  */
-  .gallery {}
+  
 
-  .ordericons {
-    display:flex;
-    justify-content:space-between;
-    margin: 0 auto;
-    width: 100px;
-    font-size:110%;
-    font-weight:500;
-    padding: 0 4%;
-    cursor:grab;
-  }
-  
-  
-  @keyframes App-logo {}
   
   /*   ===== TABLET  media query overrides mobile styles ===== */
   @media all and (max-width: 600px) 
@@ -470,9 +403,6 @@ input[type=submit] {
   }
   }
 
-  @media all and (max-width: 500px) 
-
-   {}
   
   /*   ===== DESKTOP  media query overrides mobile and tablet styles ===== */
   @media all and (min-width: 1080px) {}
