fixing one more stupid mistake que sara sara

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,7 +6,7 @@
     <title>Real Nice Dragons</title>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/main.css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src='/App.js' type="text/javascript"></script>
+    {{!-- <script src='/script.js' type="text/javascript"></script> --}}
 </head>
 <header class="nav-head">
 	<div class="background-img"></div>
@@ -30,7 +30,7 @@
 <body>
 
     {{{body}}}
-
+<script src='/script.js' type="text/javascript"></script>
 </body>
 <footer>&copy;2023 Tyrell Verley and Megan Grant</footer>
 </html>
