--- a/views/sales-details.hbs
+++ b/views/sales-details.hbs
@@ -26,7 +26,7 @@
             {{/each}}
         </tbody>
     </table>
-    <h3>Add a Transaction to Order:</h3>
+    <h3>Add a Transaction to Order</h3>
     <form id="add-sales-details-form" method="POST" action="/add-sales-details">
         <label for="input-order">Order:</label>
         <select name="input-order" id="input-order" required>
